tests/architecture/fixtures/fail/src/silicato/domain/model.py
from __future__ import annotations


class Turn:
    pass
